# turkish-tokenizer

./: .coverage  .gitignore  Cargo.toml  DEVELOPMENT.md  GITHUB_SETUP.md  MORPHOLOGICAL_INTEGRITY.md  Makefile  PYPI_SETUP.md  README.md  README_HF.md  README_RUST.md  RUST_PYTHON_INTEGRATION.md  build_package.py  coverage.xml  export_vocabularies.py  fast_matching.py  install_rust_tokenizer.sh  mapping_embeddings.ipynb  mapping_lm_head.ipynb  mapping_new_tokens_to_embeddings.ipynb  mapping_raw_model.ipynb  mapping_to_training.ipynb  mapping_tokens.ipynb  parallel_matching.py  parallel_notebook_cell.py  progress_tracking_cell.py  pyproject.toml  qwen_tokens.ipynb  results.json  results_0.json  setup.py  turkish_tokenizer_wrapper.py  ultra_fast_notebook_cell.py  vocab_mapping_with_progress.py
.github/workflows/: publish.yml  test.yml
benches/: tokenizer_bench.rs
examples/: basic_usage.rs  debug_cases.rs  hf_integration_example.py  hf_tokenizer_example.py  performance_comparison.py  python_usage.py
llama3_2/: config.py  model.py  model_trfmrs.py  vocab_to_llama_token.json
python/turkish_tokenizer_rs/: __init__.py
qwen_tokenizer/: llama_vocabs.json  turkish_vocab_dict.json  vocab_to_qwen_token.json
scripts/: compare_implementations.py  create_release.py  version_manager.py
src/: lib.rs  main.rs
src/turkish_tokenizer/: kokler.json
tests/: __init__.py  check_intersections.py  check_root_suffix_combinations.py  integration_test.rs  test_turkish_tokenizer.py
turkish_tokenizer/: .gitignore  CHANGELOG.md  Cargo.toml  MANIFEST.in  PACKAGING.md  README.md  __init__.py  bpe_tokenler.json  demo.ipynb  ekler.json  hf_turkish_tokenizer.py  kokler.json  kokler_v07.json  pyproject.toml  turkish_decoder.py  turkish_tokenizer.py
