[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "turkish-tokenizer-rs"
description = "A high-performance Turkish language tokenizer built with Rust"
authors = [{name = "Turkish Tokenizer Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["nlp", "tokenizer", "turkish", "morphology", "rust"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/turkish-nlp/turkish-tokenizer"
Repository = "https://github.com/turkish-nlp/turkish-tokenizer"
Issues = "https://github.com/turkish-nlp/turkish-tokenizer/issues"

[tool.maturin]
python-source = "python"
module-name = "turkish_tokenizer_rs"