[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turkish-tokenizer"
version = "0.1.0"
description = "High-performance morphological tokenizer for Turkish text with Rust backend"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ali Bayram", email = "malibayram20@gmail.com"}
]
maintainers = [
    {name = "Ali Bayram", email = "malibayram20@gmail.com"}
]
keywords = ["turkish", "tokenizer", "nlp", "morphological", "bpe", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/turkish-tokenizer"
Documentation = "https://github.com/yourusername/turkish-tokenizer#readme"
Repository = "https://github.com/yourusername/turkish-tokenizer"
Issues = "https://github.com/yourusername/turkish-tokenizer/issues"
Changelog = "https://github.com/yourusername/turkish-tokenizer/blob/main/CHANGELOG.md"

[project.scripts]
turkish-tokenizer = "turkish_tokenizer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["turkish_tokenizer*"]

[tool.setuptools.package-data]
turkish_tokenizer = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 